--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
 
             <FrameLayout
                 android:id="@+id/frameLayout"
-                android:layout_width="320dp"
+                android:layout_width="match_parent"
                 android:layout_height="180dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
@@ -29,7 +29,7 @@
 
                 <ImageButton
                     android:id="@+id/objectDetectionButton"
-                    android:layout_width="320dp"
+                    android:layout_width="match_parent"
                     android:layout_height="180dp"
                     android:layout_gravity="center"
                     android:background="@drawable/borderselector"
@@ -37,12 +37,13 @@
                     android:src="@drawable/red_card" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
+                    android:layout_marginLeft="0dp"
                     android:layout_marginTop="8dp"
-                    android:gravity="top|left"
+                    android:gravity="center|top"
                     android:text="Object Detection"
+                    android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textSize="20sp"
                     android:textStyle="bold" />
@@ -58,34 +59,6 @@
             android:layout_marginRight="0dp"
             android:gravity="center_horizontal"
             android:orientation="horizontal">
-
-            <FrameLayout
-                android:id="@+id/frameLayout2"
-                android:layout_width="150dp"
-                android:layout_height="180dp"
-                android:layout_marginLeft="0dp"
-                android:layout_marginTop="0dp">
-
-                <ImageButton
-                    android:id="@+id/flowerDetection"
-                    android:layout_width="150dp"
-                    android:layout_height="180dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/borderselector"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/green_card" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginTop="8dp"
-                    android:gravity="top|left"
-                    android:text="Flower\nDetection"
-                    android:textColor="@color/white"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
-            </FrameLayout>
 
             <FrameLayout
                 android:layout_width="170dp"
