--- a/app/src/main/res/layout/activity_object_detection.xml
+++ b/app/src/main/res/layout/activity_object_detection.xml
@@ -23,7 +23,7 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
         android:layout_marginEnd="16dp"
-        android:src="@drawable/ic_launcher_foreground"
+        android:src="@drawable/ic_add_photo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
