--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,81 +13,69 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <LinearLayout
+        <FrameLayout
+            android:id="@+id/frameLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal">
+            android:layout_height="180dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp">
 
-            <FrameLayout
-                android:id="@+id/frameLayout"
+            <ImageButton
+                android:id="@+id/objectDetectionButton"
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp">
+                android:background="@drawable/borderselector"
+                android:contentDescription="@string/object_detection"
+                android:scaleType="fitCenter"
+                android:src="@drawable/red_card" />
 
-                <ImageButton
-                    android:id="@+id/objectDetectionButton"
-                    android:layout_width="match_parent"
-                    android:layout_height="180dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/borderselector"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/red_card" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="8dp"
+                android:gravity="center|top"
+                android:text="@string/object_detection"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="0dp"
-                    android:layout_marginTop="8dp"
-                    android:gravity="center|top"
-                    android:text="Object Detection"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
+        </FrameLayout>
 
-            </FrameLayout>
-        </LinearLayout>
-
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="0dp"
-            android:layout_marginTop="0dp"
-            android:layout_marginRight="0dp"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal">
+            android:layout_height="180dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp">
 
-            <FrameLayout
-                android:layout_width="170dp"
-                android:layout_height="210dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="0dp"
-                android:layout_marginEnd="0dp">
 
-                <ImageButton
-                    android:id="@+id/imageClassification"
-                    android:layout_width="150dp"
-                    android:layout_height="210dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/borderselector"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/yellow_card" />
+            <ImageButton
+                android:id="@+id/imageClassification"
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:layout_gravity="center"
+                android:background="@drawable/borderselector"
+                android:contentDescription="@string/image_classification"
+                android:scaleType="fitCenter"
+                android:src="@drawable/yellow_card"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="36dp"
-                    android:layout_marginTop="8dp"
-                    android:gravity="top|left"
-                    android:text="Image\nClassification"
-                    android:textColor="@color/white"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
-            </FrameLayout>
-        </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="8dp"
+                android:gravity="center|top"
+                android:text="@string/image_classification"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </FrameLayout>
+
     </LinearLayout>
 
 
