--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,75 +8,109 @@
     android:background="#22343C"
     >
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <FrameLayout
-            android:id="@+id/frameLayout"
+        android:layout_height="match_parent">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <ImageButton
-                android:id="@+id/objectDetectionButton"
+            <FrameLayout
+                android:id="@+id/frameLayout"
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
                 android:layout_gravity="center"
-                android:background="@drawable/borderselector"
-                android:contentDescription="@string/object_detection"
-                android:scaleType="fitCenter"
-                android:src="@drawable/red_card" />
+                android:layout_marginTop="20dp">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="8dp"
-                android:gravity="center|top"
-                android:text="@string/object_detection"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                <ImageButton
+                    android:id="@+id/objectDetectionButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="180dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/borderselector"
+                    android:contentDescription="@string/object_detection"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/red_card" />
 
-        </FrameLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="8dp"
+                    android:gravity="center|top"
+                    android:text="@string/object_detection"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp">
+            </FrameLayout>
 
-
-            <ImageButton
-                android:id="@+id/imageClassification"
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
                 android:layout_gravity="center"
-                android:background="@drawable/borderselector"
-                android:contentDescription="@string/image_classification"
-                android:scaleType="fitCenter"
-                android:src="@drawable/yellow_card"/>
+                android:layout_marginTop="20dp">
 
-            <TextView
+
+                <ImageButton
+                    android:id="@+id/imageClassification"
+                    android:layout_width="match_parent"
+                    android:layout_height="180dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/borderselector"
+                    android:contentDescription="@string/image_classification"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/yellow_card"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="8dp"
+                    android:gravity="center|top"
+                    android:text="@string/image_classification"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+            </FrameLayout>
+
+
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="8dp"
-                android:gravity="center|top"
-                android:text="@string/image_classification"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-        </FrameLayout>
+                android:layout_height="180dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp">
 
-    </LinearLayout>
+
+                <ImageButton
+                    android:id="@+id/handWrittenClassification"
+                    android:layout_width="match_parent"
+                    android:layout_height="180dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/borderselector"
+                    android:contentDescription="@string/hand_written_classification"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/red_card"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="8dp"
+                    android:gravity="center|top"
+                    android:text="@string/hand_written_classification"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+            </FrameLayout>
+
+        </LinearLayout>
+    </ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
