--- a/app/src/main/res/layout/activity_object_detection.xml
+++ b/app/src/main/res/layout/activity_object_detection.xml
@@ -28,6 +28,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:contentDescription="@string/floating_button" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/pick_camera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:layout_marginBottom="16dp"
+        android:contentDescription="@string/floating_button"
+        android:src="@drawable/ic_camera"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/pick_image" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
