--- a/app/src/main/res/layout/activity_classification.xml
+++ b/app/src/main/res/layout/activity_classification.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".helpers.ClassificationActivity">
+    tools:context=".helpers.ClassificationActivity"
+    android:background="#22343C">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/selected_image"
