--- a/app/src/main/res/layout/activity_object_detection.xml
+++ b/app/src/main/res/layout/activity_object_detection.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".helpers.ObjectDetectionActivity">
+    tools:context=".helpers.ObjectDetectionActivity"
+    android:background="#22343C">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -59,6 +60,7 @@
         android:layout_marginBottom="16dp"
         android:contentDescription="@string/floating_button"
         android:src="@drawable/ic_camera"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/pick_image" />
 
